2010-07-06	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt: Fixed Procurve 2600
	SNMP configuration (Thanks to Andrew Niemantsverdriet for pointing it
	out!)

2010-07-05	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt: Added documentation to
	configure the Foundry FastIron 4802 in port-security with or without
	VoIP (IPT)

	* pf/docs/PacketFence_Administration_Guide.odt: Fixed small mistakes 

	* Renamed pf/lib/pf/SNMP/SMC/SMC8800M.pm to 
	pf/lib/pf/SNMP/SMC/TS8800M.pm, modified pf/lib/pf/SNMP/SMC/TS8800M.pm,
	pf/lib/pf/SNMP/SMC.pm, pf/t/critic.t, pf/t/data.t, 
	pf/t/hardware-snmp-objects.t, pf/t/pod.t,
	pf/html/admin/configuration/switches_add.php, 
	pf/html/admin/configuration/switches_edit.php: Renamed pf::SMC::SMC8800M
	to pf::SMC::TS8800M to align more with current naming of the SMC 
	modules. Also fixed POD doc in pf::SMC.

2010-07-01	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/t/hardware-snmp-objects.t, pf/t/SNMP.t: Moved some tests from 
	hardware-snmp-objects.t into SNMP.t.

	* pf/lib/pf/SNMP/HP/Procurve_3400cl.pm, pf/README_SWITCHES, 
	pf/html/admin/configuration/switches_add.php,
	pf/html/admin/configuration/switches_edit.php, pf/t/critic.t, 
	pf/t/hardware-snmp-objects.t, pf/t/pod.t: Added support for HP Procurve
	3400cl. Fixes #906;
	http://www.packetfence.org/bugs/view.php?id=906

	* pf/UPGRADE, pf/conf/documentation.conf, pf/conf/pf.conf.defaults, 
	pf/conf/templates/configurator/reg-detect-vlan.conf, 
	pf/conf/templates/configurator/reg-vlan.conf, 
	pf/conf/templates/configurator/zen-vlan.conf, pf/configurator.pl:
	Added a new option under trapping.passthrough: disabled. By default 
	passthrough is now disabled and must be explicitly enabled. Fixes #886;
	- New note in UPGRADE about that change
	- Updated configuration templates for VLAN isolation mode
	- Added TODO tasks to improve configurator.pl
	http://www.packetfence.org/bugs/view.php?id=886
