@@ -80,13 +80,13 @@ ExtremeNetworks Summit X250e |    XX    |    --    |    --    |    --    |
 -----------------------------|----------|----------|----------|----------|
 Foundry FastIron 4802        |    XX    |    --    |    XX    |    --    |
 -----------------------------|----------|----------|----------|----------|
-HP Procurve 2500             |    XX    |    --    |    XX    |    ??    |
+HP ProCurve 2500             |    XX    |    --    |    XX    |    ??    |
 -----------------------------|----------|----------|----------|----------|
-HP Procurve 2600             |    XX    |    --    |    XX    |    ??    |
+HP ProCurve 2600             |    XX    |    --    |    XX    |    ??    |
 -----------------------------|----------|----------|----------|----------|
-HP Procurve 3400cl           |    XX    |    --    |    XX    |    ??    |
+HP ProCurve 3400cl           |    XX    |    --    |    XX    |    ??    |
 -----------------------------|----------|----------|----------|----------|
-HP Procurve 4100             |    XX    |    --    |    XX    |    ??    |
+HP ProCurve 4100             |    XX    |    --    |    XX    |    ??    |
 -----------------------------|----------|----------|----------|----------|
 Intel Express 460            |    XX    |    --    |    --    |    --    |
 -----------------------------|----------|----------|----------|----------|
