@@ -107,10 +107,10 @@
                            'Enterasys::D2' => 'Enterasys Standalone D2',
                            'Extreme::Summit_X250e' => 'Extreme Net Summit X250e',
                            'Foundry::FastIron_4802' => 'Foundry FastIron 4802',
-                           'HP::Procurve_2500' => 'HP Procurve 2500',
-                           'HP::Procurve_2600' => 'HP Procurve 2600',
-                           'HP::Procurve_3400cl' => 'HP Procurve 3400cl',
-                           'HP::Procurve_4100' => 'HP Procurve 4100',
+                           'HP::Procurve_2500' => 'HP ProCurve 2500',
+                           'HP::Procurve_2600' => 'HP ProCurve 2600',
+                           'HP::Procurve_3400cl' => 'HP ProCurve 3400cl',
+                           'HP::Procurve_4100' => 'HP ProCurve 4100',
                            'Intel::Express_460' => 'Intel Express 460',
                            'Intel::Express_530' => 'Intel Express 530',
                            'Linksys::SRW224G4' => 'Linksys SRW224G4',
